cmake_minimum_required(VERSION 2.8)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
set(CMAKE_INSTALL_PREFIX "/usr/local")
FIND_PACKAGE( FUSE REQUIRED)
INCLUDE_DIRECTORIES( ${FUSE_INCLUDE_DIRS} )

ADD_EXECUTABLE( fusecow  fusecow.c )
TARGET_LINK_LIBRARIES( fusecow ${FUSE_LIBRARIES})

INSTALL(TARGETS fusecow DESTINATION bin)

